--- a/Drony-Dawid/projekt.tex
+++ b/Drony-Dawid/projekt.tex
@@ -21,7 +21,7 @@
 \setstretch{1.5}
 \centering
 \section*{WYDZIAŁ MECHANICZNY POLITECHNIKI BIAŁOSTOCKIEJ}
-\section*{POJEKT Z PRZEDMIOTU}
+\section*{PROJEKT Z PRZEDMIOTU}
 \section*{Systemy Autonomiczne}
 \large
 kod przedmiotu: MYAR2S22007M
